Changelog
=========

0.2 - unreleased
----------------

- Equalize height of dl.portalMessage dt and .portalMessage dd in order to
  make them equally high in cases the message wraps into more than one line.
  [denys]

- Customized image_view_fullscreen to get rid of annoying underlining under
  the image.
  [denys]

- Moved ploneCustom.css to after main.css in order to be able to customize
  styles for separate projects.
  [denys]

- Styles for the images in the content (.image-left, image-right).
  [denys]

- Remove highlighting when hovering over a table.
  [denys]

- Styles for "Default page" popup.
  [denys]

- Added base skeleton for browser tests and add a test requirement on
  ``intranett.policy``.
  [ggozad, hannosch]

0.1 - 2010-10-05
----------------

- Initial release