@@ -462,7 +462,7 @@ form.searchPage input.searchButton {
 dl.portalMessage {
     background-color: #ffffe3; 
     border: 1px solid #996; 
-    margin: 1.25em 0;
+    margin: 0 0 1.25em;
     font-size: .76em;
 }
 dl.portalMessage a {
@@ -475,14 +475,14 @@ dl.portalMessage dt {
     font-weight: bold;
     float: left;
     margin: 0 0.5em 0 0;
-    padding: 0.5em 0.75em;
+    padding: 0.6em 0.75em 0.5em;
     color: White;
-    line-height: 1.25em;
+    line-height: 1;
 }
 dl.portalMessage dd {
-    padding: 0.5em 0.5em; 
+    padding: 0.6em 0.5em 0.5em; 
     margin: 0;
-    line-height: 1.25em;
+    line-height: 1;
 }
 dl.warning {
     border-color: #d80;
